[project]
name = "csca5632-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scipy>=1.14.1",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.3",
    "scikit-learn>=1.5.2",
    "pytest>=8.4.1",
    "nltk>=3.9.1",
    "spacy>=3.8.7",
    "matplotlib-inline>=0.1.7",
    "tabulate>=0.9.0",
    "datasets>=3.6.0",
    "ruff>=0.12.0",
]
